# diploma_lapack_calc

./: CMakeLists.txt  main.c
src/: lapack_calc.c  main.c
src/include/: lapack_calc.h
